--- a/public/index.html
+++ b/public/index.html
@@ -10,27 +10,44 @@
   <script src="./js/controllers.js"></script>
   <script src="./js/services.js"></script>
   <script src="./lib/jquery-2.1.3.min/index.js"></script>
+  <script src="./lib/angularjs-datepicker/src/js/angular-datepicker.js"></script>
   <script src="./foundation/js/foundation.min.js"></script>
 
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./foundation/css/foundation.css">
+  <link href="./lib/angularjs-datepicker/src/css/angular-datepicker.css" rel="stylesheet" type="text/css" />
   
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 
 
 <body>
-
-<div class="row">
-	<a class="button" href="#/settings">Settings</a>
-	<a class="button" href="#/llamalist">Llama List</a>
-  <a class="button" href="#/firstview">First View</a>
-  <a class="button" href="#/secondview">Second View</a>
-</div>
+    <div class="sticky">
+        <nav class="sticky top-bar" data-topbar role="navigation">
+            <ul class="title-area">
+                <li class="name">
+                    <h1><a href="#/settings">Task Management</a></h1>
+                </li>
+                <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+            </ul>
+            <section class="top-bar-section">
+                <!-- Left Nav Section -->
+                <ul class="left">
+                    <li><a href="#/settings">Settings</a></li>
+                </ul>
+                <!-- Right Nav Section -->
+                <ul class="right">
+                    <li><a href="#/userlist">User List</a></li>
+                    <li><a href="#/tasklist">Task List</a></li>
+                </ul>
+            </section>
+        </nav>
+    </div>
 
 <div ng-view></div>
 
 
-  <script src="http://localhost:35729/livereload.js"></script>
+    <script src="http://localhost:35729/livereload.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
